--- a/src/main/resources/static/css/dance.css
+++ b/src/main/resources/static/css/dance.css
@@ -6,11 +6,53 @@
     overflow: hidden;
 }
 
-.waltz-img {
-
-}
-
-.waltz-btn {
+.dance-type-btn {
     padding: 10px;
     border-radius: 17px;
+    /* width: 200px; */
+    width: 240px;
+    aspect-ratio: 1.1 / 1;
+    /* aspect-ratio: 1.17 / 1; */
+    overflow: hidden;
+    flex-basis: 30%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
 }
+
+.dance-types-div {
+    display: flex;
+    flex-wrap: wrap;
+    /* width: 620px;   */
+    width: 740px;  
+    gap: 10px;  
+    
+}
+
+.dance-type-img {
+    border-radius: 17px;
+    width: 100%;
+}
+
+.dance-types-div-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.dance-type-label {
+/* Хоровод */
+
+color: #000;
+font-family: Inria Sans;
+font-size: 24px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+
+
+}
+
