--- a/src/main/resources/templates/dances/index.html
+++ b/src/main/resources/templates/dances/index.html
@@ -5,21 +5,33 @@
     <title>Dances</title>
     <link type="text/css" rel="stylesheet" th:href="@{/css/dance.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header>
-        <h1>Исторические танцы</h1>
+    <header class="header">
+        <span class="logo-text-historical">исторические</span>
+        <span class="logo-text-dance">ТАНЦЫ</span>
+        <div class="toolbar">
+            <span class="toolbar-text">УРОКИ</span>
+            <span class="toolbar-text">ТЕРМИНЫ</span>
+            <span class="toolbar-text">ТЕСТЫ</span>
+        </div>
     </header>
     <div class="dance-types-div-container">
         <div class="dance-types-div">
             <div th:each="danceType : ${danceTypes}">
-                <button class="dance-type-btn" >
+                <div class="dance-type-btn" >
                     <img class="dance-type-img" th:src="@{'/images/' + ${danceType.getName()} + '.png'}"/>
                     <span class="dance-type-label" th:text="${danceType.getName()}"></span>
-                </button>
+                </div>
             </div>
         </div>
     </div>
