add get handler for admin index page

--- a/src/main/resources/static/css/dance-list.css
+++ b/src/main/resources/static/css/dance-list.css
@@ -16,6 +16,8 @@
     border-width: 1px;
     border-color: rgb(63, 63, 63);
     border-radius: 20px;
+
+    overflow-y: auto;
 }
 
 .dance-container {
