--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,6 +5,14 @@
     <title>Admin Page</title>
     <link type="text/css" rel="stylesheet" th:href="@{/css/dance.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/admin-page.css}">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
     <script defer th:src="@{/scripts/main.js}"></script>
 </head>
 <body>
@@ -18,16 +26,34 @@
                 <span>Занятия</span>
                 <span>Мероприятия</span>
             </div>
-        <div class="list-div">
+        <div class="top-menu_list_div">
             
-            <div class="top-side-menu-div">
-                <button id="dance-list" class="left-side-menu-btn">Подборки</button>
-                <button id="dances" class="left-side-menu-btn">Танцы</button>
-                <button id="dances-types" class="left-side-menu-btn">Типы танцев</button>
+            <div class="top-bar">
+                <div class="top-bar_radio-group">
+                    <div class="radio-group-item">
+                        <input type="radio" id="radio-dance-list" name="radio" value="1" checked>
+                        <label for="radio-dance-list">Подборки</label>
+                    </div>
+                    <div class="radio-group-item">
+                        <input type="radio" id="radio-dances" name="radio" value="2">
+                        <label for="radio-dances">Танцы</label>
+                    </div>
+                    <div class="radio-group-item">
+                        <input type="radio" id="radio-dance-types" name="radio" value="3">
+                        <label for="radio-dance-types">Типы танцев</label>
+                    </div>
+                </div>
+                <div class="top-bar_left-group">
+                    <button class="new-item-btn">Добавить</button>
+
+                </div>
             </div>
-            <div class="list-container">
-                <div th:each="danceList : ${danceLists}">
+            <div id="list-container" class="list-container">
+                <div th:each="danceList : ${danceLists}" class="list-item">
                     <span th:text="${danceList.getName()}"></span>
+                    <button class="more-btn">
+                        <img src="../../images/btns/more-2-25.png" alt="" class="more-img">
+                    </button>
                 </div>
             </div>
         </div>
