--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="top-bar_left-group">
-                    <button class="new-item-btn">Добавить</button>
+                    <button class="new-item-btn" id="new-item-btn">Добавить</button>
 
                 </div>
             </div>
@@ -56,6 +56,21 @@
                     </button>
                 </div>
             </div>
+
+            <div class="creating-menu-background" id="creating-menu-background">
+                <div class="creating-menu">
+                    <div class="top-bar">
+                        <span class="bold-span">Новая подборка</span>
+                        <button class="more-btn" id="close-btn">
+                            <img src="../../images/btns/close-32.png" alt="" class="close-img">
+                        </button>
+                    </div>
+                    <label for="list-name-input" class="input-label">Название</label>
+                    <input type="text" class="list-name-input" id="list-name-input">
+                    <button id="confirm-btn" class="confirm-btn">Создать</button>
+                </div>
+            </div>
+
         </div>
     </div>
 
