--- a/src/main/resources/static/css/dance.css
+++ b/src/main/resources/static/css/dance.css
@@ -69,7 +69,7 @@
     border-color: #7a7a7a;
     border-width: 1px;
     border-style: solid;
-    box-shadow: 0px 0px 11px 0px #9a9a9a;;
+    box-shadow: 0px 0px 11px 0px #9a9a9a;
 }
 
 
