--- a/src/main/resources/static/css/admin-page.css
+++ b/src/main/resources/static/css/admin-page.css
@@ -79,6 +79,7 @@
     /*gap: 20px;*/
     align-items: center;
     justify-content: space-between;
+    width: 532px;
 }
 
 .top-bar .radio-group-item:first-child label {
