added post handers for addind new lists, dances and dance types and event listeners in js

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -60,6 +60,8 @@
             </div>
 
 
+
+
             <div class="creating-menu-background" id="dance-lists-add-menu-background">
                 <div class="creating-menu">
                     <div class="top-bar">
@@ -69,7 +71,7 @@
                         </button>
                     </div>
                     <label for="list-name-input" class="input-label">Название</label>
-                    <input type="text" class="list-name-input" id="list-name-input">
+                    <input type="text" class="name-input" id="list-name-input">
                     <button id="dance-lists-confirm-btn" class="confirm-btn">Создать</button>
                 </div>
             </div>
@@ -83,7 +85,7 @@
                         </button>
                     </div>
                     <label for="dance-name-input" class="input-label">Название</label>
-                    <input type="text" class="list-name-input" id="dance-name-input">
+                    <input type="text" class="name-input" id="dance-name-input">
 
                     <label for="dance-type" class="input-label">Тип танца</label>
                     <select id="dance-type"></select>
@@ -99,8 +101,8 @@
                             <img src="../../images/btns/close-32.png" alt="" class="close-img">
                         </button>
                     </div>
-                    <label for="list-name-input" class="input-label">Название</label>
-                    <input type="text" class="list-name-input" id="dance-types-list-name-input">
+                    <label for="dance-type-name-input" class="input-label">Название</label>
+                    <input type="text" class="name-input" id="dance-type-name-input">
                     <button id="dance-types-confirm-btn" class="confirm-btn">Создать</button>
                 </div>
             </div>
