--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
-    <script defer th:src="@{/scripts/main.js}"></script>
+    <script defer th:src="@{/scripts/admin/main.js}"></script>
     <script defer th:src="@{/scripts/admin/item-menu.js}"></script>
 
 </head>
@@ -25,9 +25,16 @@
     <div class="content-div">
 
         <div class="left-side-menu-div">
-                <span>Занятия</span>
-                <span>Мероприятия</span>
+
+            <div class="menu-item">
+                <span class="bold-span">Подборки</span>
+                <div class="menu-item__menu-option">
+                    <span>Занятия</span>
+                    <span>Мероприятия</span>
+                    <span>Прочее</span>
+                </div>
             </div>
+        </div>
         <div class="top-menu_list_div">
             
             <div class="top-bar">
@@ -105,6 +112,10 @@
                     <input type="text" class="name-input" id="dance-type-name-input">
                     <button id="dance-types-confirm-btn" class="confirm-btn">Создать</button>
                 </div>
+            </div>
+
+            <div class="more-menu">
+
             </div>
         </div>
     </div>
