added edit menu that opens and changes position by double-clicking on table items

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -89,7 +89,7 @@
 
     <div class="edit-menu" id="edit-menu">
         <label>
-            <textarea></textarea>
+            <textarea id="textarea"></textarea>
         </label>
         <div>
             <button>Отмена</button>
