--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -387,10 +387,6 @@
     gap: 10px;
 }
 
-.edit-menu {
-    border: 1px solid #dadada;
-    width: fit-content;
-}
 .edit-menu div {
     display: flex;
     flex-direction: row;
@@ -398,10 +394,13 @@
     gap: 4px;
 }
 .edit-menu {
+    border: 1px solid #c7c7c7;
+    width: fit-content;
     padding: 4px;
-
+    font-family: 'Jost', 'sans-serif';
 
     display: flex;
+    flex-direction: column;
     /*display: none;*/
 
     position:fixed;
@@ -409,6 +408,6 @@
 
     top:0;
     left:0;
-    /*background: rgba(72, 72, 72, 0.5);*/
+    background: rgb(231, 231, 231);
     z-index: 132;
 }
