dance list name update

--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -92,8 +92,8 @@
             <textarea id="textarea"></textarea>
         </label>
         <div>
-            <button>Отмена</button>
-            <button>Ок</button>
+            <button id="cancel">Отмена</button>
+            <button id="submit">Ок</button>
         </div>
     </div>
 
