changed date time format

--- a/src/main/resources/static/css/admin-page2.css
+++ b/src/main/resources/static/css/admin-page2.css
@@ -399,7 +399,7 @@
     padding: 4px;
     font-family: 'Jost', 'sans-serif';
 
-    display: flex;
+    display: none;
     flex-direction: column;
     /*display: none;*/
 
