--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -6,6 +6,9 @@
     <link type="text/css" rel="stylesheet" th:href="@{/css/dance.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/admin-page2.css}">
 
+    <link rel="stylesheet" type="text/css" th:href="@{/css/calendar.css}" />
+    <script defer type="text/javascript" th:src="@{/scripts/admin/calendar.js}"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
@@ -74,6 +77,7 @@
 
                         </th>
                         <th>Дата</th>
+                        <th>Время</th>
                         <th>Описание</th>
                         <th>Статус</th>
                     </tr>
@@ -84,8 +88,6 @@
 
         </div>
     </div>
-
-
 
     <div class="edit-menu" id="edit-menu">
         <label>
