--- a/src/main/resources/templates/admin/index2.html
+++ b/src/main/resources/templates/admin/index2.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" th:href="@{/css/admin-page2.css}">
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/calendar.css}" />
+    <script defer type="text/javascript" th:src="@{/scripts/admin/table.js}"></script>
     <script defer type="text/javascript" th:src="@{/scripts/admin/calendar.js}"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&family=Roboto:wght@300&display=swap" rel="stylesheet">
